# resumo-pdf-cli

./: README.md  pyproject.toml  requirements.txt
resumo_pdf_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: main.py
src/cli/: argumments.py  handler_extract.py
src/config/: logging_config.py
src/llm/: model.py  summarize.py
src/pdf/: extractor.py  image.py
src/resumo_pdf_cli.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
src/utils/: files.py  settings.py  text.py  validator.py
